Fix dark mode toggle position on mobile

--- a/sass/features/_dark-mode.scss
+++ b/sass/features/_dark-mode.scss
@@ -18,7 +18,7 @@
 
   @media (max-width: $container-mobile) {
     right: -11rem;
-    top: -3.5rem;
+    top: -3.7rem;
   }
 }
 
